--- a/ui/widgets/password_test.html
+++ b/ui/widgets/password_test.html
@@ -36,12 +36,12 @@
     var val = frp.createB('testss');
 
     var password = new recoil.ui.widgets.PasswordWidget(scope);
-    password.attach('password', val,  recoil.ui.BoolWithExplaination.TRUE);
+    password.attach('password', val,  recoil.ui.BoolWithExplanation.TRUE);
 
     var label = password.getLabel();
 
     var inputWidget = new recoil.ui.widgets.InputWidget(scope);
-    inputWidget.attach('input', val,  recoil.ui.BoolWithExplaination.TRUE);
+    inputWidget.attach('input', val,  recoil.ui.BoolWithExplanation.TRUE);
 
     label.getComponent().render($('label'));
     password.getComponent().render($('password'));
