--- a/ui/widgets/widget_test.html
+++ b/ui/widgets/widget_test.html
@@ -8,7 +8,7 @@
   goog.require('recoil.frp.Frp');
   goog.require('recoil.ui.widgets.table.TableWidget');
   goog.require('recoil.ui.widgets.NumberWidget');
-  goog.require('recoil.ui.BoolWithExplaination');
+  goog.require('recoil.ui.BoolWithExplanation');
   goog.require('recoil.ui.WidgetScope');
   
   function doRedirect() {
