--- a/ui/widgets/selector_test.html
+++ b/ui/widgets/selector_test.html
@@ -75,20 +75,22 @@ See the COPYING file for details.
 
     var selector = new recoil.ui.widgets.SelectorWidget(scope);
 
-    var enabledItems = {
-        enabledItems: [new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
+    var enabledItems =
+            [new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
             new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
             new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
             new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
             new recoil.ui.BoolWithExplanation(true, undefined, recoil.ui.messages.VALID),
-            new recoil.ui.BoolWithExplanation(false, undefined, recoil.ui.messages.INVALID)]};
+            new recoil.ui.BoolWithExplanation(false, undefined, recoil.ui.messages.INVALID)];
 
-    recoil.ui.widgets.SelectorWidget.options
-            .value(value)
-            .list(list)
-            .renderer(opt_renderer)
-            .enabledItems(enabledItems)
-            .attach(selector);
+//    recoil.ui.widgets.SelectorWidget.options
+//            .value(value)
+//            .list(list)
+//            .renderer(opt_renderer)
+//            .enabledItems(enabledItems)
+//            .attach(selector);
+
+    selector.attach('', value, list, recoil.ui.BoolWithExplanation.TRUE, opt_renderer, frp.createB(enabledItems));
 
     selector.getComponent().render($('selector'));
     label.getComponent().render($('label'));
