Changed Select column factory call to attachStruct instead of attach.

--- a/ui/widgets/selector_test.html
+++ b/ui/widgets/selector_test.html
@@ -26,6 +26,7 @@ See the COPYING file for details.
         goog.require('goog.ui.Separator');
         goog.require('recoil.ui.widgets.SelectorWidget');
         goog.require('recoil.ui.widgets.LabelWidget');
+        goog.require('recoil.frp.Debug');
 
     </script>
 
