change unit tests so the work with the new directory structure

--- a/src/frp/visibleobserver_test.html
+++ b/src/frp/visibleobserver_test.html
@@ -4,8 +4,8 @@
 
 <meta charset="UTF-8" http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Check list unit tests - lib.frp.VisibleObserver</title>
-<script src="../../../closure-library/closure/goog/base.js"></script>
-<script src="../../../my-deps.js"></script>
+<script src="../../lib/closure-library/closure/goog/base.js"></script>
+<script src="../../my-deps.js"></script>
 <script>
 function doObserveTest() {
 
