--- a/src/ui/widgets/widget_test.html
+++ b/src/ui/widgets/widget_test.html
@@ -1,8 +1,8 @@
 <html>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>recoil.ui.widgets.TableWidget</title>
-<script src="../../../../closure-library/closure/goog/base.js"></script>
-<script src="../../../../my-deps.js"></script>
+<script src="../../../lib/closure-library/closure/goog/base.js"></script>
+<script src="../../../my-deps.js"></script>
 
 <script>
   goog.require('recoil.frp.Frp');
