--- a/src/ui/widgets/password_test.html
+++ b/src/ui/widgets/password_test.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Password Test</title>
-    <script src="../../../../closure-library/closure/goog/base.js"></script>
-    <script src="../../../../my-deps.js"></script>
+    <script src="../../../lib/closure-library/closure/goog/base.js"></script>
+    <script src="../../../my-deps.js"></script>
     <script>
         goog.require('goog.dom');
         goog.require('recoil.frp.Frp');
