--- a/src/ui/widgets/table/table_widget_test.html
+++ b/src/ui/widgets/table/table_widget_test.html
@@ -1,15 +1,15 @@
     <html>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <title>recoil.ui.widgets.TableWidget</title>
-<script src="../../../../../closure-library/closure/goog/base.js"></script>
-<script src="../../../../../my-deps.js"></script>
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/checkbox.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/menubutton.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/menu.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/menuitem.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/menuseparator.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/flatmenubutton.css">
-<link rel="stylesheet" href="../../../../../closure-library/closure/goog/css/common.css">
+<script src="../../../../lib/closure-library/closure/goog/base.js"></script>
+<script src="../../../../my-deps.js"></script>
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/checkbox.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/menubutton.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/menu.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/menuitem.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/menuseparator.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/flatmenubutton.css">
+<link rel="stylesheet" href="../../../../lib/closure-library/closure/goog/css/common.css">
 
 <script>
   goog.require('recoil.frp.Frp');
