--- a/src/frp/change_manager_test.html
+++ b/src/frp/change_manager_test.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Check list unit tests - recoil.frp.ChangeManager</title>
-<script src="../../lib/closure-library/closure/goog/base.js"></script>
-<script src="../../my-deps.js"></script>
+<script src="../../../closure-library/closure/goog/base.js"></script>
+<script src="../../../my-deps.js"></script>
 <script>
 goog.require('recoil.frp.ChangeManagerTest');
 </script>
