--- a/src/structs/uniquepriorityqueue_test.html
+++ b/src/structs/uniquepriorityqueue_test.html
@@ -11,8 +11,8 @@ See the COPYING file for details.
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Check list unit tests - lib.structs.UniquePriorityQueue</title>
-<script src="../../lib/closure-library/closure/goog/base.js"></script>
-<script src="../../my-deps.js"></script>
+<script src="../../../closure-library/closure/goog/base.js"></script>
+<script src="../../../my-deps.js"></script>
 <script>
 goog.require('recoil.structs.UniquePriorityQueueTest');
 </script>
