--- a/src/ui/widgets/checkbox_test.html
+++ b/src/ui/widgets/checkbox_test.html
@@ -10,8 +10,8 @@ See the COPYING file for details.
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Checkbox Test</title>
-  <script src="../../../lib/closure-library/closure/goog/base.js"></script>
-  <script src="../../../my-deps.js"></script>
+  <script src="../../../../closure-library/closure/goog/base.js"></script>
+  <script src="../../../../my-deps.js"></script>
   <script>
     goog.require('goog.dom');
     goog.require('recoil.frp.Frp');
@@ -26,7 +26,7 @@ See the COPYING file for details.
   </script>
 
   <link rel="stylesheet" href="../css/demo.css">
-  <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/checkbox.css">
+  <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/checkbox.css">
 </head>
 <body>
 
