--- a/src/ui/widgets/selector_test.html
+++ b/src/ui/widgets/selector_test.html
@@ -9,8 +9,8 @@ See the COPYING file for details.
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Selector Test</title>
-    <script src="../../../lib/closure-library/closure/goog/base.js"></script>
-    <script src="../../../my-deps.js"></script>
+    <script src="../../../../closure-library/closure/goog/base.js"></script>
+    <script src="../../../../my-deps.js"></script>
     <script>
         goog.require('goog.dom');
         goog.require('recoil.frp.Frp');
@@ -31,11 +31,11 @@ See the COPYING file for details.
     </script>
 
     <link rel="stylesheet" href="../css/demo.css">
-    <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/menubutton.css">
-    <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/menu.css">
-    <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/menuitem.css">
-    <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/menuseparator.css">
-    <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/flatmenubutton.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menubutton.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menu.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menuitem.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menuseparator.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/flatmenubutton.css">
     <link rel="stylesheet" href="../css/checklist.css">
 
 </head>
