--- a/src/ui/widgets/treeview_test.html
+++ b/src/ui/widgets/treeview_test.html
@@ -10,8 +10,8 @@ See the COPYING file for details.
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>goog.ui.tree.TreeControl</title>
-  <script src="../../../lib/closure-library/closure/goog/base.js"></script>
-  <script src="../../../my-deps.js"></script>
+  <script src="../../../../closure-library/closure/goog/base.js"></script>
+  <script src="../../../../my-deps.js"></script>
   <script>
     goog.require('goog.debug.DivConsole');
     goog.require('goog.debug.Trace');
@@ -22,7 +22,7 @@ See the COPYING file for details.
   </script>
   <script src="testdata.js"></script>
   <link rel="stylesheet" href="../css/demo.css">
-  <link rel="stylesheet" href="../../../lib/closure-library/closure/goog/css/tree.css">
+  <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/tree.css">
   <style>
     #div-console {
       position: absolute;
