--- a/src/db/database_test.html
+++ b/src/db/database_test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="../../../closure-library/closure/goog/base.js"></script>
-    <script src="../../../../my-deps.js"></script>
+    <script src="../../../my-deps.js"></script>
     <script>
         goog.require('recoil.db.DatabaseTest');
     </script>
