--- a/src/ui/widgets/input_test.html
+++ b/src/ui/widgets/input_test.html
@@ -15,8 +15,10 @@
         goog.require('recoil.ui.WidgetHelper');
         goog.require('recoil.ui.Widget');
         goog.require('recoil.ui.widgets.InputWidget');
+        goog.require('recoil.ui.widgets.CheckboxWidget');
     </script>
     <link rel="stylesheet" href="../css/demo.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/checkbox.css">
     <!--<link rel="stylesheet" href="../../../../closure-library/closure/goog/css/checkbox.css">-->
 </head>
 <body>
@@ -32,16 +34,18 @@
 
     var val = frp.createB("test");
 
+  var editableB = frp.createB(true);
+  var label = new recoil.ui.widgets.LabelWidget(scope);
     var input1 = new recoil.ui.widgets.InputWidget(scope);
-    input1.attach('input1', val, recoil.ui.BoolWithExplanation.TRUE);
-    input1.getLabel().getComponent().render($('label1'));
-    input1.getLabel().attach(val, recoil.ui.BoolWithExplanation.TRUE);
+    input1.attachStruct({value : val, editable : editableB});
+    label.getComponent().render($('label1'));
+  label.attach(val);
     input1.getComponent().render($('input1'));
 
-//    var input2 = new recoil.ui.widgets.LabelWidget(scope);
-//    input2.getComponent().render($('input2'));
-//    input2.attach('label1', false);
-
+    var input2 = new recoil.ui.widgets.CheckboxWidget(scope);
+  input2.getComponent().render($('input2'));
+  input2.attach('fish',editableB, recoil.ui.BoolWithExplanation.TRUE);
+  
 </script>
 </body>
 </html>
