--- a/src/ui/widgets/popup_test.html
+++ b/src/ui/widgets/popup_test.html
@@ -29,7 +29,13 @@ See the COPYING file for details.
     <link rel="stylesheet" href="../../ui/css/popup.css"/>
     <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/common.css"/>
     <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/datepicker.css"/>
-<!--
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menubutton.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menu.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menuitem.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/menuseparator.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/flatmenubutton.css">
+    <link rel="stylesheet" href="../../../../closure-library/closure/goog/css/common.css">
+    <!--
     <xxlink rel="stylesheet" href="../../../../closure-library/closure/goog/css/menubutton.css"/>
     <xxlink rel="stylesheet" href="../../../../closure-library/closure/goog/css/menu.css"/>
     <xxlink rel="stylesheet" href="../../../../closure-library/closure/goog/css/menuitem.css"/>
